  * By default reject installing packages w/o an Architecture field. They
    now need --force-architecture, dpkg will still warn about them though.
  * Fix build failure when passing --disable-nls to configure.
  * Do not segfault on “dpkg -i --no-act”.
  * Add missing semicolon to the vsnprintf() compat declaration.
    Thanks to Robert Millan. Closes: #612203

  [ Raphaël Hertzog ]
  * Fail properly when debian/source/format is empty. Closes: #600854
  * Add new deb-src-control(5) manual page documenting the debian/control
    file contained in source packages.
    - it documents the X[SBC]- prefix. Closes: #476335
    - it documents the VCS-* fields too. Closes: #483119
    Thanks to Oxan van Leeuwen <oxan@oxanvanleeuwen.nl> who wrote it
    as part of the Google Code In program.
  * Enhance dpkg-shlibdeps to not fail immediatly when a library is not found.
    Instead continue and fail after all problems have been reported. Thanks
    to Chris Baines <cbaines8@gmail.com> for the patch. Closes: #596841
  * Fix dpkg-source to not list Debian packaging files as modified
    upstream files in Format "1.0" when unpacking to a non-standard
    directory.

  [ Jonathan Nieder ]
  * Remove support for use of synchronous sync(2), due to its pernicious
    side-effects and to ease maintenance.

  [ Updated programs translations ]
  * Portuguese (Miguel Figueiredo).
  * Spanish (Javier Fernandez-Sanguino).
  * Swedish (Peter Krefting).

  [ Updated man page translations ]
  * German (Helge Kreutzmann).
  * Swedish (Peter Krefting).

  [ Updated scripts translations ]
  * German (Helge Kreutzmann).
  * Swedish (Peter Krefting).

  [ Updated dselect translations ]
  * Spanish (Javier Fernandez-Sanguino).

 -- Guillem Jover <guillem@debian.org>  Thu, 29 Jul 2010 11:00:22 +0200

dpkg (1.15.8.10) unstable; urgency=low

  * Do not segfault on “update-alternatives --auto” when the link group only
    has alternatives which are dangling symlinks. Closes: #611545
