@@ -34,6 +34,8 @@ dpkg (1.16.0) UNRELEASED; urgency=low
   * Do not segfault on “dpkg -i --no-act”.
   * Add missing semicolon to the vsnprintf() compat declaration.
     Thanks to Robert Millan. Closes: #612203
+  * On install for Ubuntu adjust the i386 GNU cpu name in cputable.
+    Thanks to Colin Watson <cjwatson@ubuntu.com>. Closes: #611741
 
   [ Raphaël Hertzog ]
   * Fail properly when debian/source/format is empty. Closes: #600854
